[gd_scene load_steps=7 format=3 uid="uid://b2yv7lmi07hfj"]

[ext_resource type="Texture2D" uid="uid://dqaehttexexqh" path="res://assets/prototype/Dark/texture_01.png" id="1_xres6"]
[ext_resource type="Script" uid="uid://bbbjypkksgosg" path="res://scenes/mainMenu/Scripts/mainMenuScript.gd" id="2_e8eeb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8a5hx"]

[sub_resource type="Sky" id="Sky_0huwb"]
sky_material = SubResource("ProceduralSkyMaterial_8a5hx")

[sub_resource type="Environment" id="Environment_uyg78"]
background_mode = 2
sky = SubResource("Sky_0huwb")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8a5hx"]
albedo_texture = ExtResource("1_xres6")
uv1_scale = Vector3(20, 20, 20)

[node name="TestWorld" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uyg78")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7875807, 0.6162115, 0, -0.6162115, 0.7875807, 0, 1.9818738, 0)
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.045814514, -0.35473633, -0.18376923)
use_collision = true
size = Vector3(39.45375, 0.29052734, 48.29338)
material = SubResource("StandardMaterial3D_8a5hx")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(0.8757006, 0.12900476, -0.46530226, 0, 0.9636491, 0.2671711, 0.48285446, -0.23396191, 0.8438681, 1.6297703, 3.2519016, 6.0166836)
use_collision = true
size = Vector3(3.032671, 8.925537, 3.9626064)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.68811405, 0.35557196, -0.63250905, 2.1420195e-08, 0.8717017, 0.49003685, 0.7256026, -0.3372012, 0.5998302, -16.44912, 12.364686, 19.32393)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -79.0
offset_right = 112.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_e8eeb")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play Game"

[node name="Option" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Option"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="VBoxContainer" method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Option" to="VBoxContainer" method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="VBoxContainer" method="_on_quit_pressed"]
